--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="search_text">Search</string>
     <string name="loadTopRated">Top Rated</string>
     <string name="loadPopularity">Popularity</string>
+    <string name="loadFavorites">Favorites</string>
     <string name="movieOrder">Order movie by:</string>
     <string name="error">The application encountered an error.\nPlease check if you have internet access.</string>
     <string name="evaluate">Evaluate Movie</string>
